# gleipnir

./: .dockerignore  CHANGELOG.md  Makefile  README.md  gleipnir.cabal
docker/gleipnir/: Dockerfile  runner.sh
docker/maelstrom/: Dockerfile
executables/: Broadcast.hs  Echo.hs  UniqueIDs.hs
src/: Main.hs  Message.hs
src/Gleipnir/: Message.hs  Node.hs
