cabal-version:      2.4
name:               gleipnir
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             sushigumi
maintainer:         osushi.g@gmail.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

library
    hs-source-dirs: src
    exposed-modules:
        Gleipnir.Message
        Gleipnir.Node
    build-depends:
      , base ^>=4.17.2.0
      , aeson ^>=2.2.1.0
      , bytestring ^>=0.11.5.2
      , deepseq ^>=1.4.8.0
      , mtl ^>=2.2.2
      , text ^>=2.0.2
      , time ^>=1.12.2
      , unordered-containers ^>=0.2.19.1
    default-language: Haskell2010


executable gleipnir-echo
    main-is:          Echo.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:
      , base ^>=4.17.2.0
      , aeson ^>=2.2.1.0
      , bytestring ^>=0.11.5.2
      , deepseq ^>=1.4.8.0
      , mtl ^>=2.2.2
      , text ^>=2.0.2
      , time ^>=1.12.2
      , unordered-containers ^>=0.2.19.1
      , gleipnir
    hs-source-dirs:   executables
    default-language: Haskell2010

executable gleipnir-unique-ids
    main-is:          UniqueIDs.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:
      , base ^>=4.17.2.0
      , aeson ^>=2.2.1.0
      , bytestring ^>=0.11.5.2
      , deepseq ^>=1.4.8.0
      , mtl ^>=2.2.2
      , text ^>=2.0.2
      , time ^>=1.12.2
      , unordered-containers ^>=0.2.19.1
      , gleipnir
    hs-source-dirs:   executables
    default-language: Haskell2010

executable gleipnir-broadcast
    main-is:          Broadcast.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:
      , base ^>=4.17.2.0
      , aeson ^>=2.2.1.0
      , bytestring ^>=0.11.5.2
      , deepseq ^>=1.4.8.0
      , mtl ^>=2.2.2
      , text ^>=2.0.2
      , time ^>=1.12.2
      , unordered-containers ^>=0.2.19.1
      , containers ^>=0.6.7
      , gleipnir
    hs-source-dirs:   executables
    default-language: Haskell2010

